--- a/style.css
+++ b/style.css
@@ -1,6 +1,6 @@
 @font-face {
     font-family: "Raleway";
-    src: url("Raleway/Raleway-VariableFont_wght.ttf") ;
+    src: url("Raleway/Raleway-VariableFont_wght.ttf");
    }
 
 body {
@@ -36,4 +36,92 @@ header a {
 header a:hover {
     color: #0065FC;
 }
+
+/* Section 1 */
+
+#searchSection p {
+    font-size: 14px;
+}
+
+form {
+    display: flex;
+}
+
+form i {
+    border: 1px solid #F2F2F2; 
+    padding: 10px;
+    border-radius: 10px 0px 0px 10px;
+    background-color: #F2F2F2;
+}
+
+form input {
+    padding: 10px;
+    border: 1px solid #F2F2F2;
+    font-weight: bold;
+}
+
+form button {
+    border-radius: 0px 10px 10px 0px;
+    color: white;
+    background-color: #0065FC;
+    border: 1px solid #0065FC;
+}
+
+#filters {
+    display: flex;
+    margin-top: 20px;
+}
+
+#filters p {
+    padding: 4px 0px;
+}
+
+#filters ul li {
+    display: inline-block;
+    list-style-type: none;
+    margin: 0px 30px;
+}
+
+#filters ul li a {
+    color: black;
+    text-decoration: none;
+    border: 1px solid #F2F2F2;
+    padding: 10px 10px 10px 30px;
+    border-radius: 0px 20px 20px 0px;
+    position:relative;
+    font-size: 14px;
+}
+
+#filters ul li i {
+    background-color: #DEEBFF;
+    color: #0065FC;
+    padding: 12px;
+    border-radius: 20px;
+    position: absolute;
+    left: -17px;
+    top: 0px;
+    width: 16px;
+}
+
+#avalaible i {
+    display: inline-block;
+    font-size: 13px;
+    border: 1px solid #F2F2F2;
+    border-radius: 42px;
+    padding: 3px 7px;
+    color:#0065FC 
+}
+
+#avalaible p {
+    display: inline-block;
+    margin-left: 5px;
+    vertical-align: middle;
+    font-size: 14px;
+}
+
+
+
+
+
+
 
