fix: change margin for the class activities

--- a/style.css
+++ b/style.css
@@ -273,6 +273,7 @@ form button {
 .activities {
     display: flex;
     justify-content: space-between;
+    margin-left: -16px;
 }
 
 .activities img {
