--- a/style.css
+++ b/style.css
@@ -7,11 +7,11 @@ body {
 }
 
 section {
-    margin: 30px;
+    margin: 20px;
 }
 
 h1 {
-    font-size: 19px;
+    font-size: 22px;
 }
 
 /* Header */
@@ -50,29 +50,32 @@ header a:hover {
 
 form {
     display: flex;
+    margin-top: 22px;
 }
 
 form i {
     border: 1px solid #F2F2F2; 
-    padding: 11px;
-    border-radius: 10px 0px 0px 10px;
+    padding: 18px;
+    border-radius: 15px 0px 0px 15px;
     background-color: #F2F2F2;
 }
 
 form input {
-    padding: 10px;
+    padding: 17px;
     border: 1px solid #F2F2F2;
     font-weight: bold;
+    width: 223px;
+    font-size: 16px;
 }
 
 form button {
-    border-radius: 0px 10px 10px 0px;
+    border-radius: 0px 15px 15px 0px;
     color: white;
     background-color: #0065FC;
     border: 1px solid #0065FC;
     font-size: 15px;
     font-weight: bold;
-    width: 110px;
+    width: 132px;
 }
 
 .filters {
@@ -84,18 +87,22 @@ form button {
     font-weight: bold;
 }
 
+.filters ul {
+    padding-inline-start: 33px;
+}
+
 .filters ul li {
     display: inline-block;
     list-style-type: none;
-    margin: 0px 30px;
+    margin: 0px 18px;
 }
 
 .filters ul li a {
     color: black;
     text-decoration: none;
     border: 1px solid #F2F2F2;
-    padding: 10px 10px 10px 30px;
-    border-radius: 0px 20px 20px 0px;
+    padding: 17px 20px 17px 50px;
+    border-radius: 0px 25px 25px 0px;
     position:relative;
     font-weight: bold;
 }
@@ -103,10 +110,10 @@ form button {
 .filters ul li i {
     background-color: #DEEBFF;
     color: #0065FC;
-    padding: 12px;
-    border-radius: 20px;
+    padding: 18px;
+    border-radius: 25px;
     position: absolute;
-    left: -17px;
+    left: -24px;
     top: 0px;
     width: 16px;
 }
@@ -114,6 +121,10 @@ form button {
 .filters ul li a:hover {
     background-color: #DEEBFF;
     color: #0065FC;
+}
+
+.avalaible {
+    margin: 22px 0px;
 }
 
 .avalaible i {
