--- a/css/accomodationSection.css
+++ b/css/accomodationSection.css
@@ -4,10 +4,6 @@
     justify-content: space-between;
 }
 
-#accomodationSection h1 {
-    margin: 28px 0px 0px 28px;
-}
-
 .fa-star {
     color: #F2F2F2;
 }
@@ -21,8 +17,12 @@
 #accomodationSection article {
     border: 1px solid #F2F2F2;
     border-radius: 20px;
-    width: 65%;
+    width: 879px;
     background-color:#F2F2F2;
+}
+
+#accomodationSection article h1 {
+    margin: 28px 0px 0px 28px;
 }
 
 .roomsArticle {
@@ -33,7 +33,7 @@
 
 .roomsArticle a {
     background-color: white;
-    padding: 5px;
+    width: 245px;
     border-radius: 20px;
     box-shadow: 0px 0px 7px 1px grey;
     margin: 20px 20px;
@@ -43,10 +43,11 @@
 }
 
 .roomsArticle img {
-    width: 240px;
-    height: 120px;
+    width: 236px;
+    height: 114px;
     border-radius: 20px 20px 0px 0px;
     object-fit: cover;
+    padding: 4px;
 }
 
 .descriptionArticle h2, .descriptionAside h2 {
@@ -55,7 +56,7 @@
 }
 
 .descriptionArticle {
-    padding: 0px 8px;
+    padding: 0px 16px 6px;
 }
 
 .descriptionArticle p {
@@ -63,7 +64,7 @@
 }
 
 .displayMore {
-    padding: 20px 0px 20px 35px;
+    padding: 10px 0px 20px 35px;
 }
 
 .displayMore a {
@@ -83,28 +84,33 @@
     border-radius: 20px;
     background-color:#F2F2F2;
     margin-right: 20px;
-    width: 30%;
+    width: 419px;
 }
 
 #accomodationSection aside h1 {
     display: inline-block;
-    margin-right: 172px;
-}
-
-.roomsAside a {
-    display: flex;
-    background-color: white;
-    border-radius: 20px;
-    box-shadow: 0px 0px 7px 1px grey;
-    padding: 5px;
-    margin: 20px 20px;
-    text-decoration: none;
-    color: black;
+    margin: 28px 121px 0px 34px;
 }
 
 .roomsAside {
     display: flex;
     flex-direction: column;
+}
+
+.roomsAside a {
+    display: flex;
+    width: 342px;
+    background-color: white;
+    border-radius: 20px;
+    box-shadow: 0px 0px 7px 1px grey;
+    padding: 5px;
+    margin: 20px 34px;
+    text-decoration: none;
+    color: black;
+}
+
+.fa-chart-line {
+    font-size: 21px;
 }
 
 .roomsAside img {
