feat(accomodationSection): add responsive design for max-width 1400px

--- a/css/accomodationSection.css
+++ b/css/accomodationSection.css
@@ -138,3 +138,18 @@
     position: absolute;
     bottom: 5px;
 }
+
+@media screen and (max-width: 1400px) {
+
+    #accomodationSection {
+        justify-content: space-around;
+    }
+
+    #accomodationSection article {
+        width: 690px; 
+    }
+
+    #accomodationSection aside {
+        height: fit-content;
+    }
+}
