feat(footer): add responsive design for max-width 1200px

--- a/css/footer.css
+++ b/css/footer.css
@@ -32,3 +32,13 @@ footer a {
     text-decoration: none;
     color: black;
 }
+
+@media screen and (max-width: 1200px){
+
+    footer {
+        justify-content: space-around;
+    }
+    .a_propos, .accommodation, .assistance {
+        margin-left: 0px;
+    }
+}
