--- a/css/header.css
+++ b/css/header.css
@@ -10,8 +10,11 @@ header img {
     margin-top: 30px
 }
 
+header nav {
+    display: flex;
+}
+
 header a {
-    display: inline-block;
     padding: 50px 20px;
     text-decoration: none;
     color: black; 
