feat(footer): add responsive for max-width 768px

--- a/css/footer.css
+++ b/css/footer.css
@@ -42,3 +42,11 @@ footer a {
         margin-left: 0px;
     }
 }
+
+@media screen and (max-width: 768px){
+
+    footer {
+        justify-content: left;
+        flex-wrap: wrap;
+    }
+}
