--- a/css/searchSection.css
+++ b/css/searchSection.css
@@ -4,7 +4,7 @@ form {
     margin-top: 22px;
 }
 
-form i {
+.fa-map-marker-alt {
     border: 1px solid #F2F2F2; 
     padding: 18px;
     border-radius: 15px 0px 0px 15px;
@@ -27,6 +27,10 @@ form button {
     font-size: 15px;
     font-weight: bold;
     width: 132px;
+}
+
+.fa-search {
+    visibility: hidden;
 }
 
 .filters {
@@ -79,19 +83,41 @@ form button {
 
 .avalaible {
     margin: 2px 0px 22px;
+    display: flex;
 }
 
 .avalaible i {
-    display: inline-block;
     font-size: 13px;
     border: 1px solid #F2F2F2;
     border-radius: 42px;
     padding: 3px 7px;
-    color:#0065FC 
+    color:#0065FC;
+    height: 14px;
+    margin-top: 14px;
 }
 
 .avalaible p {
-    display: inline-block;
     margin-left: 5px;
     vertical-align: middle;
+}
+
+@media screen and (max-width: 576px){
+
+    form button {
+        width: 55px;
+        border-radius: 15px 15px 15px 15px;
+    }
+
+    .searchButton {
+        display: none;
+    }
+
+    .fa-search {
+        visibility: visible;
+    }
+
+    .filters {
+        display: block;
+    }
+    
 }
