--- a/css/accomodationSection.css
+++ b/css/accomodationSection.css
@@ -189,3 +189,14 @@
     }
 
 }
+
+@media screen and (max-width: 992px){
+
+    .roomsArticle a {
+        width: 342px;
+    }
+
+    .roomsArticle img {
+        width: 334px;
+    }
+}
