feat(header): add responsive design for max-width 576px

--- a/css/header.css
+++ b/css/header.css
@@ -53,3 +53,12 @@ header a:active {
     }
 
 }
+
+@media screen and (max-width: 576px){
+
+    .filters p {
+        font-size: 18px;
+        padding-top: 10px;
+    }
+
+}
