--- a/css/header.css
+++ b/css/header.css
@@ -26,7 +26,12 @@ header a:last-child {
     color: #0065FC;
 }
 
-header a:active {
+header a:hover {
+    color: #0065FC;
+    border-top: 2px solid #0065FC;
+}
+
+header a:first-child {
     color: #0065FC;
     border-top: 2px solid #0065FC;
 }
