--- a/css/accommodationSection.css
+++ b/css/accommodationSection.css
@@ -36,7 +36,7 @@
     background-color: white;
     width: 245px;
     border-radius: 20px;
-    box-shadow: 0px 0px 7px 1px grey;
+    box-shadow: 0px 0px 20px 10px #f2f2f2;
     margin: 20px 20px;
     text-decoration: none;
     color: black;
@@ -102,7 +102,7 @@
     width: 342px;
     background-color: white;
     border-radius: 20px;
-    box-shadow: 0px 0px 7px 1px grey;
+    box-shadow: 0px 0px 20px 10px #f2f2f2;
     padding: 5px;
     margin: 20px 34px;
     text-decoration: none;
@@ -164,7 +164,7 @@
     .roomsAside a {
         margin: 20px 5px 36px 5px;
         flex-direction: column;
-        height: 235px;
+        height: 218px;
         width: auto;
     }
 
@@ -174,7 +174,7 @@
     }
 
     .starsAside {
-        top: 88px;
+        top: 72px;
     }
 
     .fa-chart-line {
@@ -200,7 +200,7 @@
     .roomsArticle a {
         width: auto;
         margin: 20px 5px;
-        height: 235px;
+        height: 218px;
     }
 
     .roomsArticle img {
@@ -213,7 +213,7 @@
 
     .starsArticle {
         position: absolute;
-        top: 85px;
+        top: 72px;
     }
 
     .displayMore {
