--- a/css/accommodationSection.css
+++ b/css/accommodationSection.css
@@ -187,8 +187,6 @@
         top: 30px;
     }
 
-
-
     .roomsArticle {
         display: grid;
         margin: 0px 50px;
@@ -216,6 +214,20 @@
 
     .displayMore {
         margin: 0px 15px;
+    }
+}
+
+@media screen and (max-width: 992px) {
+
+    #accommodationSection aside {
+        width: 100%;
+        border-radius: 0px;
+    }
+
+    #accommodationSection article {
+        background-color: white;
+        width: 100%;
+        border: none;
     }
 }
 
