--- a/css/activitiesSection.css
+++ b/css/activitiesSection.css
@@ -1,3 +1,7 @@
+#activitiesSection h1 {
+    margin-bottom: 33px;
+}
+
 .activities {
     display: grid;
     grid-template-columns: repeat(4, 1fr);
@@ -73,6 +77,13 @@
 
 .longchamp img {
     height: 150px;
+}
+
+@media screen and (max-width: 1400px){
+
+    #activitiesSection {
+        margin-top: 65px;
+    }
 }
 
 @media screen and (max-width: 992px){
