--- a/css/searchSection.css
+++ b/css/searchSection.css
@@ -55,14 +55,14 @@ form button {
 .filters ul li {
     display: flex;
     list-style-type: none;
-    margin: 0px 18px 20px;
+    margin: 0px 23px 20px;
 }
 
 .filters ul li a {
     color: black;
     text-decoration: none;
     border: 2px solid #F2F2F2;
-    padding: 13px 20px 13px 50px;
+    padding: 13px 20px 13px 37px;
     border-radius: 0px 25px 25px 0px;
     position:relative;
     font-weight: bold;
@@ -121,6 +121,10 @@ form button {
 
     .filters {
         display: block;
+    }
+
+    .filters ul {
+        padding-inline-start: 0px;
     }
     
 }
