--- a/css/header.css
+++ b/css/header.css
@@ -1,29 +1,48 @@
 header {
+    display: grid;
+    grid-template-columns: auto 1fr auto auto;
+    margin: 0px 50px;
+  }
+  
+nav {
+    grid-column: 3;
+    align-self: start;
     display: flex;
     justify-content: space-between;
-    margin: 0px 50px;
+  }
+  
+.signup {
+    grid-column: 4;
+    align-self: start;
+    display: flex;
+    justify-content: end;
+  }  
+
+.signup a {
+    font-weight: bold;
+    color: #0065FC;
 }
 
 header img {
-    width: 110px;
-    height: 51px;
-    margin-top: 30px;
-}
-
-header nav {
-    display: flex;
+    width: 94px;
+    height: 45px;
+    padding: 37px 0px 50px;
 }
 
 header a {
-    padding: 50px 20px;
     text-decoration: none;
-    color: black; 
-    margin: 0px 10px 0px 10px;
+    color: black;
+    padding: 50px 22px 0px 22px;
+    border-top: 2px solid white;
 }
 
-header a:last-child {
-    font-weight: bold;
+header nav a:first-child {
     color: #0065FC;
+    border-top: 2px solid #0065FC;
+}
+
+header nav a:last-child {
+    margin: 0px 24px;
 }
 
 header a:hover {
@@ -31,39 +50,55 @@ header a:hover {
     border-top: 2px solid #0065FC;
 }
 
-header a:first-child {
-    color: #0065FC;
-    border-top: 2px solid #0065FC;
-}
+@media screen and (max-width: 640px){
 
-@media screen and (max-width: 768px){
-
-    header nav {
-        flex-wrap: wrap-reverse;
-        flex-direction:row-reverse;
+    header {
+        grid-template-columns: 1fr 1fr;
+        border-bottom: 2px solid #F2F2F2;
+        margin: 0px;
     }
 
-    header nav a:nth-of-type(2) {
-        order: -1;
+    nav {
+        grid-row: 2;
+        grid-column: 1/3;
+        display: flex;
+        justify-content: space-around;
     }
 
-    header a:active {
+    .signup {
+        grid-row: 1;
+        grid-column: 2;
+        margin-right: 50px;
+    }
+
+    .signup a:hover {
+        border-top: 2px solid white;
+    }
+
+    header img {
+        padding: 37px 0px 0px 50px;
+    }
+
+    header nav a {
+        padding: 40px 38px 20px 38px;
+        width: 50%;
+        text-align: center;
+    }
+
+    header nav a:first-child {
         border-bottom: 2px solid #0065FC;
         border-top: none;
     }
 
-    header a:last-child:active {
-        border-top: 2px solid #0065FC;
-        border-bottom: none;
+    header nav a:last-child {
+        margin: 0px;
     }
 
-}
-
-@media screen and (max-width: 576px){
-
-    .filters p {
-        font-size: 18px;
-        padding-top: 10px;
+    header nav a:hover {
+        color: #0065FC;
+        border-bottom: 2px solid #0065FC;
+        border-top: none;
     }
 
+    
 }
