--- a/css/footer.css
+++ b/css/footer.css
@@ -1,21 +1,91 @@
+footer {
+    background-color: #F2F2F2;
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
+}
 
+footer h2 {
+    font-size: 17px;
+    margin-bottom: 27px;
+    margin-block-start: 0px;
+}
+
+footer ul {
+    padding-inline-start: 0px;
+}
+
+footer ul li {
+    font-size: 15px;
+    list-style-type: none;
+    padding: 5px 0px;
+}
+
+footer a {
+    text-decoration: none;
+    color: black;
+}
+
+.a_propos {
+    padding-top: 50px;
+    padding-left: 50px;
+}
+
+.accommodation {
+    padding-top: 50px;
+    padding-left: 30px;
+}
+
+.assistance {
+    padding-top: 50px;
+}
+
+@media screen and (max-width: 768px){
+
+    footer {
+        grid-template-columns: repeat(2, 1fr);
+    }
+
+    .assistance {
+        padding-left: 50px;
+    }
+}
+
+@media screen and (max-width: 576px){
+
+    footer {
+        grid-template-columns: none;
+    }
+
+    .accommodation {
+        padding-left: 50px;
+    }
+}
+
+/*
 footer {
     background-color: #F2F2F2;
     display: flex;
 }
 
 .a_propos {
-    padding: 30px;
+    padding: 50px 30px;
     margin-left: 20px;;
 }
 
-.accommodation, .assistance {
-    padding: 30px;
-    margin-left: 200px;
+.accommodation {
+    padding: 50px 30px;
+    margin-left: 173px;
+}
+
+.assistance {
+    padding: 50px 30px;
+    margin-left: 254px;
 }
 
 footer h2 {
     font-size: 17px;
+    margin-bottom: 27px;
+    margin-block-start: 0px;
 }
 
 footer ul {
@@ -36,17 +106,25 @@ footer a {
 @media screen and (max-width: 1200px){
 
     footer {
-        justify-content: space-around;
+        justify-content: space-between;
     }
-    .a_propos, .accommodation, .assistance {
+
+    .a_propos {
+        padding-left: 30px;
+    }
+
+    .accommodation, .assistance {
         margin-left: 0px;
+    }
+
+    .assistance {
+        padding-right: 30px;
     }
 }
 
 @media screen and (max-width: 768px){
 
     footer {
-        justify-content: left;
         flex-wrap: wrap;
     }
 }
@@ -58,11 +136,11 @@ footer a {
     }
 
     .a_propos, .accommodation {
-        padding: 30px 30px 0px 30px;
+        padding: 50px 30px 0px 30px;
     }
 
     .assistance {
-        padding: 30px 30px;
+        padding: 50px 30px;
     }
 }
-
+*/
