--- a/css/accommodationSection.css
+++ b/css/accommodationSection.css
@@ -142,7 +142,11 @@
 
 @media screen and (max-width: 1400px){
     
-    #accommodationSection article h1, #accommodationSection aside h1 {
+    #accommodationSection article h1 {
+        margin: 28px 0px 23px 50px;
+    }
+    
+    #accommodationSection aside h1 {
         margin: 28px 0px 0px 50px;
     }
 
@@ -201,12 +205,13 @@
         grid-template-columns: repeat(3, 1fr);
         column-gap: 30px;
         padding: 0px;
+        row-gap: 40px;
     }
 
     .roomsArticle a {
         width: auto;
-        margin: 20px 0px;
         height: 218px;
+        margin: 0px;
     }
 
     .roomsArticle img {
@@ -311,10 +316,6 @@
     .roomsArticle {
         display: flex;
         flex-direction: column;
-    }
-
-    .roomsArticle a {
-        margin: 10px 0px 0px 0px;
     }
 
     .displayMore {
