fix(body): add margin to section for max-width 576px

--- a/css/style.css
+++ b/css/style.css
@@ -13,3 +13,10 @@ section {
 h1 {
     font-size: 22px;
 }
+
+@media screen and (max-width: 576px){
+    
+    section {
+        margin: 0px 20px;
+    }
+}
