--- a/css/activitiesSection.css
+++ b/css/activitiesSection.css
@@ -1,4 +1,5 @@
-#activitiesSection h1 {
+#activitiesSection h2 {
+    font-size: 22px;
     margin-bottom: 33px;
 }
 
@@ -46,7 +47,7 @@
     box-shadow: 0px 7px 20px 0px #0001;
 }
 
-.activities h2 {
+.activities h3 {
     font-size: 15px;
     margin-left: 20px;
     color : black;
